# fastapi_training

./: dz.py  main.py  pyproject.toml
src/: main.py  utils.py
